# servant-tutorial

./: .envrc  .gitignore  README.md  flake.nix  servant-tutorial.cabal
app/: Main.hs
src/: Utils.hs
src/App1_2/: App1.hs  App2.hs  Data.hs
src/App3/: App.hs  Client.hs  Data.hs
src/Server1_2/: Data.hs  Server1.hs  Server2.hs
src/Server3/: Client.hs  Data.hs  Server3.hs
src/Todo/: App.hs  Client.hs  DB.hs  Data.hs  Middleware.hs  Server.hs  Utils.hs
