cabal-version:      3.4
name:               servant-tutorial
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Ian Burzynski
maintainer:         23251244+iburzynski@users.noreply.github.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable servant-tutorial
    import:           warnings
    main-is:          Main.hs
    other-modules:    
        App1_2.App1
      , App1_2.App2
      , App1_2.Data
      , App3.App
      , App3.Data
      , App3.Client
      , Todo.Client
      , Todo.Data
      , Todo.DB
      , Todo.Middleware
      , Todo.App
      , Utils
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0
      , aeson
      , bytestring
      , containers
      , directory
      , http-client
      , http-types
      , monad-logger
      , mtl
      , path-pieces
      , persistent
      , persistent-sqlite
      , resourcet
      , servant-client
      , servant-server
      , text
      , time
      , wai
      , wai-extra
      , warp
    default-extensions:
        DataKinds
      , DeriveAnyClass
      , DeriveGeneric
      , OverloadedStrings
      , TypeApplications
      , TypeOperators
    hs-source-dirs:   app, src
    default-language: Haskell2010